--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
       </div>
       <div class="empresa">
         <span class="empresa-ano">2050</span>
-        <h3 class="empresa-titulo">Bikecraft</h3>
-        <span class="empresa-titulo">Desenvolvedor Júnior</span>
+        <h3 class="empresa-titulo">Infantil</h3>
+        <span class="empresa-titulo">Fotos no Estúdio</span>
         <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML</p>
         <ul class="empresa-habilidades">
-          <li>HTML</li>
-          <li>HTML</li>
-          <li>HTML</li>
-          <li>HTML</li>
+          <li>Newborn</li>
+          <li>SmashTheCake</li>
+          <li>Mensal</li>
+          
         </ul>
       </div>
       <div class="empresa">
