--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
 
       <div class="empresa">
         <span class="empresa-ano">2050</span>
-        <h3 class="empresa-titulo">Bikecraft</h3>
-        <span class="empresa-titulo">Desenvolvedor Júnior</span>
-        <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML.</p>
+        <h3 class="empresa-titulo">Familia</h3>
+        <span class="empresa-titulo">Fotos no Estúdio</span>
+        <p class="empresa-texto">??????????? ????????????? ??????? ???? ?????? ????????????</p>
         <ul class="empresa-habilidades">
-          <li>HTML</li>
-          <li>HTML</li>
-          <li>HTML</li>
-          <li>HTML</li>
+          <li>??????</li>
+          <li>??????</li>
+          <li>??????</li>
         </ul>
       </div>
       <div class="empresa">
@@ -59,14 +58,13 @@
       </div>
       <div class="empresa">
         <span class="empresa-ano">2050</span>
-        <h3 class="empresa-titulo">Bikecraft</h3>
-        <span class="empresa-titulo">Desenvolvedor Júnior</span>
-        <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML,</p>
+        <h3 class="empresa-titulo">Externo</h3>
+        <span class="empresa-titulo">Fotos Externas</span>
+        <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML</p>
         <ul class="empresa-habilidades">
-          <li>HTML</li>
-          <li>HTML</li>
-          <li>HTML</li>
-          <li>HTML</li>
+          <li>??????</li>
+          <li>??????</li>
+          <li>??????</li>
         </ul>
       </div>
     </div>
