--- a/index.html
+++ b/index.html
@@ -9,126 +9,36 @@
 </head>
 
 <body>
-  <header class="header">
-    <img class="marca" src="./img/marca.png" alt="Logo">
-    <nav>
-      <ul class="header-menu">
-        <li><a href="#experiencia">Experiência</a></li>
-        <li><a href="#formacao">Formação</a></li>
-        <li><a href="#contato">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <main class="introducao">
-    <img src="./img/perfil.png" alt="fotografa">
-    <div>
-      <h1>Fotógrafa Profissional</h1>
-      <p>Localizado em RO/AM📍</p>
-    </div>
-  </main>
-
-  <section class="experiencia" id="experiencia" aria-label="Experiencia">
-    <h2 class="subtitulo">Experiência</h2>
-    <div>
-      <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML, CSS e JavaScript. Para aplicativos web como a rede social Dogs eu trabalhei no UX e UI Design do projeto.</p>
-
-      <div class="empresa">
-        <span class="empresa-ano">2050</span>
-        <h3 class="empresa-titulo">Familia</h3>
-        <span class="empresa-titulo">Fotos no Estúdio</span>
-        <p class="empresa-texto">??????????? ????????????? ??????? ???? ?????? ????????????</p>
-        <ul class="empresa-habilidades">
-          <li>??????</li>
-          <li>??????</li>
-          <li>??????</li>
-        </ul>
-      </div>
-      <div class="empresa">
-        <span class="empresa-ano">2050</span>
-        <h3 class="empresa-titulo">Infantil</h3>
-        <span class="empresa-titulo">Fotos no Estúdio</span>
-        <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML</p>
-        <ul class="empresa-habilidades">
-          <li>Newborn</li>
-          <li>SmashTheCake</li>
-          <li>Mensal</li>
-          
-        </ul>
-      </div>
-      <div class="empresa">
-        <span class="empresa-ano">2050</span>
-        <h3 class="empresa-titulo">Externo</h3>
-        <span class="empresa-titulo">Fotos Externas</span>
-        <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML</p>
-        <ul class="empresa-habilidades">
-          <li>??????</li>
-          <li>??????</li>
-          <li>??????</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <section class="formacao" id="formacao" aria-label="Formação">
-    <div class="formacao-container">
-      <h2 class="subtitulo">Formação</h2>
-
+  <div class="header">
+    <div class="marca">
       <div>
-        <p class="formacao-texto">
-          Minha mais recente experiência acadêmica foi o mestrado, quef zi no exterior em UX Desing. Além disso me mantenho sempre atualizado com curso intensivos online.
-        </p>
-
-        <ul class="faculdade-lista">
-          <li class="faculdade">
-            <span class="faculdade-tipo">bacharel</span>
-            <h3 class="faculdade-curso">Administração de Empresas</h3>
-            <span class="faculdade-instituicao">UFRRJ</span>
-          </li>
-          <li class="faculdade">
-            <span class="faculdade-tipo">tecnico</span>
-            <h3 class="faculdade-curso">Administração de Empresas</h3>
-            <span class="faculdade-instituicao">UFRRJ</span>
-          </li>
-          <li class="faculdade">
-            <span class="faculdade-tipo">mestrado</span>
-            <h3 class="faculdade-curso">Administração de Empresas</h3>
-            <span class="faculdade-instituicao">UFRRJ</span>
-          </li>
-        </ul>
-
-        <div class="formacao-extra">
-          <div class="cursos">
-            <h3>Cursos Intensivos</h3>
-            <ul>
-              <li>Ux Desing e Ui desing <span>56h</span></li>
-              <li>Ux Desing e Ui desing <span>66h</span></li>
-            </ul>
-          </div>
-          <div class="idiomas">
-            <h3>Cursos Intensivos</h3>
-            <ul>
-              <li>Ux Desing e Ui desing <span>56h</span></li>
-              <li>Ux Desing e Ui desing <span>66h</span></li>
-            </ul>
-          </div>
-        </div>
+        <h1>Eternize <span>memórias</span></h1>
+      </div>
+      <div>
+        <a class="nosso-trabalho" href="https://wa.me/+5569984760707">CONHEÇA NOSSO TRABALHO <img src="./img/seta.png" alt=""></a>
       </div>
     </div>
-  </section>
+
+    <div class="img-inicio">
+      <div class="flex-primeiro">
+        <a class="agende" href="https://wa.me/+5569984760707">AGENDE UM HORÁRIO</a>
+        <a href="./index.html"><img src="./img/marca.png" alt="Logo"></a>
+      </div>
+    </div>
+  </div>
+
+
 
   <footer class="footer" id="contato">
     <div class="footer-container">
       <p class="footer-texto"> Estou disponivel para novos peojetos. Entre em contato comigo e marcamos uma conversa</p>
       <ul class="footer-contato">
-        <li>easfasdedfsr</li>
-        <li>dsfreasdesrg</li>
-        <li> <a href="/">@intragram</a></li>
-     </ul>
-     <p class="footer-copy"> Ro. Alguns direitos reservados</p>
+        <li> <a href="https://www.instagram.com/rosangelaresendefotografa/?hl=pt-br">@intragram</a></li>
+      </ul>
+      <p class="footer-copy"> Ro. Alguns direitos reservados</p>
     </div>
   </footer>
-
 </body>
 
 </html>
